// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CatAvatar /> renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "marginBottom": 4,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        },
        {
          "marginBottom": 4,
        },
      ]
    }
  >
    <Image
      accessibilityIgnoresInvertColors={true}
      source={1}
      style={
        {
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        }
      }
      testID="avatar-image"
    />
  </View>
  <Text
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "fontFamily": "System",
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        {
          "writingDirection": "ltr",
        },
        {
          "color": undefined,
          "fontFamily": "Nunito-Medium",
        },
      ]
    }
  >
    Name
  </Text>
</View>
`;

exports[`<TouchableCatAvatar /> renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "marginBottom": 4,
      "opacity": 1,
    }
  }
  testID="cat-avatar"
>
  <View
    style={
      [
        {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        },
        {
          "marginBottom": 4,
        },
      ]
    }
  >
    <Image
      accessibilityIgnoresInvertColors={true}
      source={1}
      style={
        {
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        }
      }
      testID="avatar-image"
    />
  </View>
  <Text
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "fontFamily": "System",
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        {
          "writingDirection": "ltr",
        },
        {
          "color": undefined,
          "fontFamily": "Nunito-Medium",
        },
      ]
    }
  >
    Name
  </Text>
</View>
`;
